...
    >
      <Tab.Screen
        name="Home"
        component={DashboardScreen}
        options={{
          tabBarIcon: ({ color, size }) => <Icon name="home" color={color} size={size} />,
          headerTitle: "MindFork",
        }}
      />
      <Tab.Screen
        name="Food"
        component={FoodScreen}
        options={{
...
        options={{
          tabBarIcon: ({ color, size }) => <Icon name="book-open" color={color} size={size} />,
          headerTitle: "Meal planning",
        }}
      />
      <Tab.Screen
        name="Coach"
        component={CoachStackNavigator}
        options={{
          tabBarIcon: ({ color, size }) => <Icon name="message-circle" color={color} size={size} />,
          headerTitle: "AI Coach",
        }}
      />
...
